@@ -472,15 +472,10 @@ end
 --- Remove all GUI filters for the given player.
 -- @tparam uint player_index
 function flib_gui.remove_player_filters(player_index)
-  local filters_table = global.__flib.gui
-  for event_name, event_filters in pairs(filters_table) do
-    local player_filters = event_filters[player_index]
-    if player_filters then
-      event_filters[player_index] = nil
-      event_filters.__size = event_filters.__size - 1
-      if event_filters.__size == 0 then
-        filters_table[event_name] = nil
-      end
+  for group_name in pairs(handler_groups) do
+    -- check for a level-1 group to minimize calls to update_filters()
+    if not string.find(group_name, "%.") then
+      flib_gui.update_filters(group_name, player_index, nil, "remove")
     end
   end
 end
